# db-agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
backend/: Dockerfile  main.py
backend/api/v1/: main.py
backend/config/: settings.py
backend/core/ai/: agent_graph.py  graph_nodes.py  graph_state.py  prompt_builder.py  schema_retriever.py  sql_executor.py  sql_generator.py  test_category_query.py
backend/models/: db_connection.py  monitoring.py  table_anomaly.py
backend/repositories/: anomaly_repository.py  db_connection_repository.py  monitoring_repository.py
backend/scheduler/: metric_scheduler.py  test_scheduler.py
backend/services/: ai_search_service.py  business_context_service.py  scheduler_service.py  schema_service.py  table_anomaly_service.py
backend/tests/: test_scheduler_integration.py
frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: staticwebapp.config.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/pages/: Dashboard.tsx  DbConnections.tsx  DbSetup.tsx  Landing.tsx  MetricSetup.tsx
scripts/data/: sample_data.sql  schema.sql
scripts/data/business_context/: tables.yaml
scripts/deployment/azure/: common.sh  deploy-backend.sh  (+2 more)
scripts/setup/: enrich_business_context.py  export_schema.py  generate_business_context_draft.py  ingest_schema_ai_search.py  init_cosmos_db.py  test_db_connection.py  test_search.py  validate_pipeline.py
(+39 files in other folders)
