[project]
name = "db-agent"
version = "0.1.0"
description = "AI DB monitoring agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.12",
    "langgraph>=0.0.20",
    "azure-cosmos>=4.5.1",
    "azure-search-documents>=11.4.0",
    "azure-identity>=1.15.0",
    "openai>=1.6.1",
    "sqlparse>=0.4.4",
    "psycopg2-binary>=2.9.9",
    "apscheduler>=3.10.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0,<2.0.0",
    "pyyaml>=6.0.3",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 백엔드 소스코드 경로 지정
[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
